added get all categories endpoint
